--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "action.rotp_zhp.hp_vine_attack": "Vine attack",
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
+  "action.rotp_zhp.hp_doxx": "Position divination",
 
   "action.rotp_zhp.hp_breath": "Hamon Breath",
   "action.rotp_zhp.hp_block": "Hermito Thorns",
@@ -15,7 +16,10 @@
   "rotp_zhp.subtitle.hp_grapple": "Hermito Purple vine grapple",
   "rotp_zhp.subtitle.hp_throw": "Hermito Purple throw vine",
   "rotp_zhp.subtitle.hp_grp_ent": "Hermito Purple entity catched",
+  "rotp_zhp.subtitle.hp_ora": "Joseh attack",
 
   "jojo.message.action_condition.no_hamon": "You need to learn Hamon",
-  "jojo.message.action_condition.no_binded": "Yo need to bind an entity"
+  "jojo.message.action_condition.no_map": "You need an empty map in your offhand",
+
+  "filled_map.divination": "Divination of "
 }
