--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -5,6 +5,7 @@
   "action.rotp_zhp.hp_vine_attack": "Vine attack",
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
   "action.rotp_zhp.hp_doxx": "Position divination",
+  "action.rotp_zhp.hp_camera": "Photo divination",
 
   "action.rotp_zhp.hp_breath": "Hamon Breath",
   "action.rotp_zhp.hp_block": "Hermito Thorns",
