--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -5,6 +5,7 @@
   "action.rotp_zhp.hp_vine_attack": "Vine attack",
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
   "action.rotp_zhp.hp_doxx": "Position divination",
+  "action.rotp_zhp.hp_camera": "Photo divination",
 
   "action.rotp_zhp.hp_breath": "Hamon Breath",
   "action.rotp_zhp.hp_block": "Hermito Thorns",
@@ -20,6 +21,7 @@
 
   "jojo.message.action_condition.no_hamon": "You need to learn Hamon",
   "jojo.message.action_condition.no_map": "You need an empty map in your offhand",
+  "jojo.message.action_condition.no_paper": "You need paper",
 
   "filled_map.divination": "Divination of "
 }
