--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -4,6 +4,8 @@
 
   "action.rotp_zhp.hp_vine_attack": "Vine attack",
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
+  "action.rotp_zhp.hp_grab": "Grab Entity",
+  "action.rotp_zhp.hp_grab_od": "OverDrive grabbed entity",
   "action.rotp_zhp.hp_doxx": "Position divination",
   "action.rotp_zhp.hp_doxx_s": "Position divination (Zoom)",
   "action.rotp_zhp.hp_camera": "Photo divination",
@@ -18,7 +20,7 @@
   "rotp_zhp.subtitle.hp_grapple": "Hermito Purple vine grapple",
   "rotp_zhp.subtitle.hp_throw": "Hermito Purple throw vine",
   "rotp_zhp.subtitle.hp_grp_ent": "Hermito Purple entity catched",
-  "rotp_zhp.subtitle.hp_ora": "Joseh attack",
+  "rotp_zhp.subtitle.hp_ora": "\"OVER DRIVE\"",
 
   "jojo.message.action_condition.no_hamon": "You need to learn Hamon",
   "jojo.message.action_condition.no_map": "You need an empty map in your offhand",
