--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -4,24 +4,45 @@
 
   "action.rotp_zhp.hp_vine_attack": "Vine attack",
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
-  "action.rotp_zhp.hp_doxx": "Position divination",
-  "action.rotp_zhp.hp_camera": "Photo divination",
+  "action.rotp_zhp.hp_grab": "Grab Entity",
+  "action.rotp_zhp.hp_grab_od": "OverDrive grabbed entity",
+  "action.rotp_zhp.cringe": "OH NO CRINGE",
+
+
 
   "action.rotp_zhp.hp_breath": "Hamon Breath",
   "action.rotp_zhp.hp_block": "Hermito Thorns",
   "action.rotp_zhp.hp_vine":"Vine",
   "action.rotp_zhp.hp_vine_entity": "Vine Grapple",
+  "action.rotp_zhp.hp_doxx": "Position divination",
+  "action.rotp_zhp.hp_doxx_s": "Position divination (Zoom)",
+  "action.rotp_zhp.hp_camera": "Photo divination",
+  "action.rotp_zhp.hp_target": "Target selection",
+  "action.rotp_zhp.hp_barrier": "Hermit Purple String (%s/%s)",
+
 
   "rotp_zhp.subtitle.hp_summon": "Hermit Purple Summon",
   "rotp_zhp.subtitle.hp_user": "\"Hermito Purple\"",
   "rotp_zhp.subtitle.hp_grapple": "Hermito Purple vine grapple",
   "rotp_zhp.subtitle.hp_throw": "Hermito Purple throw vine",
   "rotp_zhp.subtitle.hp_grp_ent": "Hermito Purple entity catched",
-  "rotp_zhp.subtitle.hp_ora": "Joseh attack",
+  "rotp_zhp.subtitle.hp_ora": "\"OVER DRIVE\"",
+  "rotp_zhp.subtitle.hp_spark": "Hermit Purple spark",
+  "rotp_zhp.subtitle.joseph_breath": "Breathing",
+  "rotp_zhp.subtitle.joseph_cringe": "OH NO CRINGE",
 
   "jojo.message.action_condition.no_hamon": "You need to learn Hamon",
   "jojo.message.action_condition.no_map": "You need an empty map in your offhand",
   "jojo.message.action_condition.no_paper": "You need paper",
+  "jojo.message.action_condition.strings_learn": "You need to learn Rope Trap skill",
 
-  "filled_map.divination": "Divination of "
+  "filled_map.divination": "Divination of ",
+
+  "gui.hermitpurpletarget.title": "Hermit Purple target select",
+  "gui.hermitpurpletarget.tab_all": "Players",
+  "gui.hermitpurpletarget.tab_hidden": "Entities",
+  "gui.hermitpurpletarget.tab_blocked": "Structures",
+  "gui.hermitpurpletarget.search_empty": "Couldn't find any target with that name",
+  "gui.hermitpurpletarget.random": "Random"
+
 }
