--- a/src/main/resources/assets/rotp_zhp/lang/es_mx.json
+++ b/src/main/resources/assets/rotp_zhp/lang/es_mx.json
@@ -6,6 +6,7 @@
   "action.rotp_zhp.hp_vine_shift": "Enredadera atrapante",
   "action.rotp_zhp.hp_grab": "Capturar entidad",
   "action.rotp_zhp.hp_grab_od": "OverDrive entidad atrapada",
+  "action.rotp_zhp.hp_grab_heal": "Enredadera sanadora",
   "action.rotp_zhp.cringe": "OH NO CRINGE",
 
 
