--- a/src/main/resources/assets/rotp_zhp/lang/en_ud.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_ud.json
@@ -6,11 +6,14 @@
   "action.rotp_zhp.hp_vine_shift": "ʞɔɐʇʇɐ ƃuᴉpuᴉq ǝuᴉΛ",
   "action.rotp_zhp.hp_grab": "ʎʇᴉʇuƎ qɐɹפ",
   "action.rotp_zhp.hp_grab_od": "ʎʇᴉʇuǝ pǝqqɐɹƃ ǝʌᴉɹpɹǝʌO",
+  "action.rotp_zhp.hp_grab_heal": "ǝuᴉʌ ƃuᴉlɐǝH",
   "action.rotp_zhp.cringe": "ƎפNIɹƆ ON HO",
+
+
 
   "action.rotp_zhp.hp_breath": "ɥʇɐǝɹq uoɯɐH",
   "action.rotp_zhp.hp_block": "suɹoɥ┴ oʇᴉɯɹǝH",
-  "action.rotp_zhp.hp_vine":"ǝuᴉΛ",
+  "action.rotp_zhp.hp_vine": "ǝuᴉΛ",
   "action.rotp_zhp.hp_vine_entity": "ǝlddɐɹפ ǝuᴉΛ",
   "action.rotp_zhp.hp_doxx": "uoᴉʇɐuᴉʌᴉp uoᴉʇᴉsoԀ",
   "action.rotp_zhp.hp_doxx.s": "uoᴉʇɐuᴉʌᴉp uoᴉʇᴉsoԀ s, ",
@@ -27,8 +30,8 @@
   "rotp_zhp.subtitle.hp_grp_ent": "pǝɥɔʇɐɔ ʎʇᴉʇuǝ ǝldɹnԀ oʇᴉɯɹǝH",
   "rotp_zhp.subtitle.hp_ora": "\"ƎΛIɹp ɹƎΛO\"",
   "rotp_zhp.subtitle.hp_spark": "ʞɹɐds ǝldɹnԀ oʇᴉɯɹǝH",
-  "rotp_zhp.subtitle.joseph_breath": "Breathing",
-  "rotp_zhp.subtitle.joseph_cringe": "OH NO CRINGE",
+  "rotp_zhp.subtitle.joseph_breath": "ƃuᴉɥʇɐǝɹq",
+  "rotp_zhp.subtitle.joseph_cringe": "ƎפNIɹƆ ON HO",
 
   "jojo.message.action_condition.no_hamon": "uoɯɐH uɹɐǝl oʇ pǝǝu no⅄",
   "jojo.message.action_condition.no_map": "puɐɥɟɟo ɹnoʎ uᴉ dɐɯ ʎʇdɯǝ uɐ pǝǝu no⅄",
@@ -42,6 +45,13 @@
   "gui.hermitpurpletarget.tab_hidden": "sǝᴉʇᴉʇuƎ",
   "gui.hermitpurpletarget.tab_blocked": "sǝɹnʇɔnɹʇS",
   "gui.hermitpurpletarget.search_empty": "ǝɯɐu ʇɐɥʇ ɥʇᴉʍ ʇǝƃɹɐʇ ʎuɐ puᴉɟ ʇ,uplnoƆ",
-  "gui.hermitpurpletarget.random": "ɯopuɐɹ"
+  "gui.hermitpurpletarget.random": "ɯopuɐɹ",
+
+
+  "rotp_zhp.config.hamonToHermit": "Hamon gives Hermit Purple",
+  "rotp_zhp.config.control": "Hamon control required",
+  "rotp_zhp.config.strength": "Hamon strenght required",
+  "rotp_zhp.config.breathing": "Hamon strenght breathing"
+
 
 }
