--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -6,6 +6,7 @@
   "action.rotp_zhp.hp_vine_shift": "Vine binding attack",
   "action.rotp_zhp.hp_grab": "Grab Entity",
   "action.rotp_zhp.hp_grab_od": "OverDrive grabbed entity",
+  "action.rotp_zhp.hp_grab_heal": "Healing vine",
   "action.rotp_zhp.cringe": "OH NO CRINGE",
 
 
@@ -16,6 +17,7 @@
   "action.rotp_zhp.hp_vine_entity": "Vine Grapple",
   "action.rotp_zhp.hp_doxx": "Position divination",
   "action.rotp_zhp.hp_doxx.s": "Position divination of ",
+  "action.rotp_zhp.hp_doxx_user": "'s user",
   "action.rotp_zhp.hp_camera": "Photo divination",
   "action.rotp_zhp.hp_target": "Target selection",
   "action.rotp_zhp.hp_barrier": "Hermit Purple String (%s/%s)",
@@ -36,6 +38,7 @@
   "jojo.message.action_condition.no_map": "You need an empty map in your offhand",
   "jojo.message.action_condition.no_paper": "You need paper",
   "jojo.message.action_condition.strings_learn": "You need to learn Rope Trap skill",
+  "jojo.message.action_condition.no_healing": "You need to learn Healing Touch",
 
   "filled_map.divination": "Divination of ",
 
@@ -43,7 +46,15 @@
   "gui.hermitpurpletarget.tab_all": "Players",
   "gui.hermitpurpletarget.tab_hidden": "Entities",
   "gui.hermitpurpletarget.tab_blocked": "Structures",
+  "gui.hermitpurpletarget.tab_stands": "Stands",
+  "gui.hermitpurpletarget.tab_biomes": "Biomes",
   "gui.hermitpurpletarget.search_empty": "Couldn't find any target with that name",
-  "gui.hermitpurpletarget.random": "Random"
+  "gui.hermitpurpletarget.random": "Random",
+
+
+  "rotp_zhp.config.hamonToHermit": "Hamon gives Hermit Purple",
+  "rotp_zhp.config.control": "Hamon control required",
+  "rotp_zhp.config.strength": "Hamon strenght required",
+  "rotp_zhp.config.breathing": "Hamon strenght breathing"
 
 }
