--- a/src/main/resources/assets/rotp_zhp/lang/zh_cn.json
+++ b/src/main/resources/assets/rotp_zhp/lang/zh_cn.json
@@ -4,6 +4,7 @@
 
   "action.rotp_zhp.hp_vine_attack": "藤蔓攻击",
   "action.rotp_zhp.hp_vine_shift": "藤蔓缠绕攻击",
+  "action.rotp_zhp.hp_grab_heal": "传导治愈波纹",
   "action.rotp_zhp.hp_grab": "捆绑生物",
   "action.rotp_zhp.hp_grab_od": "传导波纹疾走",
   "action.rotp_zhp.cringe": "OH NO CRINGE",
@@ -12,30 +13,34 @@
 
   "action.rotp_zhp.hp_breath": "波纹呼吸",
   "action.rotp_zhp.hp_block": "藤蔓护体",
-  "action.rotp_zhp.hp_vine":"拉动自身",
-  "action.rotp_zhp.hp_vine_entity": "拉向自己",
+  "action.rotp_zhp.hp_vine":"藤蔓穿梭",
+  "action.rotp_zhp.hp_vine_entity": "拉动实体",
   "action.rotp_zhp.hp_doxx": "位置念写",
   "action.rotp_zhp.hp_doxx.s": "念写 ",
+  "action.rotp_zhp.hp_doxx_user": "的使用者",
   "action.rotp_zhp.hp_camera": "照片念写",
   "action.rotp_zhp.hp_target": "选择目标",
+  "action.rotp_zhp.hp_camera.s": "照片念写目标：%s",
+  "action.rotp_zhp.hp_camera.stand": "替身念写目标：%s",
   "action.rotp_zhp.hp_barrier": "藤蔓陷阱 (%s/%s)",
   "action.rotp_zhp.hp_unbarrier": "收回藤蔓陷阱",
 
-  "rotp_zhp.subtitle.hp_summon": "Hermit Purple Summon",
-  "rotp_zhp.subtitle.hp_unsummon": "Hermit Purple unsummon",
-  "rotp_zhp.subtitle.hp_user": "\"Hermito Purple\"",
-  "rotp_zhp.subtitle.hp_grapple": "Hermito Purple vine grapple",
-  "rotp_zhp.subtitle.hp_throw": "Hermito Purple throw vine",
-  "rotp_zhp.subtitle.hp_grp_ent": "Hermito Purple entity catched",
-  "rotp_zhp.subtitle.hp_ora": "\"OVER DRIVE\"",
-  "rotp_zhp.subtitle.hp_spark": "Hermit Purple spark",
-  "rotp_zhp.subtitle.joseph_breath": "Breathing",
+  "rotp_zhp.subtitle.hp_summon": "紫色隐者显形",
+  "rotp_zhp.subtitle.hp_unsummon": "收回紫色隐者",
+  "rotp_zhp.subtitle.hp_user": "\"紫色隐者！\"",
+  "rotp_zhp.subtitle.hp_grapple": "紫色隐者发射藤蔓",
+  "rotp_zhp.subtitle.hp_throw": "紫色隐者发射藤蔓",
+  "rotp_zhp.subtitle.hp_grp_ent": "紫色隐者捆住目标",
+  "rotp_zhp.subtitle.hp_ora": "\"波纹疾走！\"",
+  "rotp_zhp.subtitle.hp_spark": "紫色隐者发动能力",
+  "rotp_zhp.subtitle.joseph_breath": "呼吸声",
   "rotp_zhp.subtitle.joseph_cringe": "OH NO CRINGE",
 
   "jojo.message.action_condition.no_hamon": "你需要学会波纹",
   "jojo.message.action_condition.no_map": "你需要将空地图放在你的副手",
   "jojo.message.action_condition.no_paper": "你需要纸",
   "jojo.message.action_condition.strings_learn": "你需要解锁波纹丝线结界",
+  "jojo.message.action_condition.no_healing": "你需要学习触碰治疗",
 
   "filled_map.divination": "念写目标",
 
@@ -44,6 +49,19 @@
   "gui.hermitpurpletarget.tab_hidden": "实体",
   "gui.hermitpurpletarget.tab_blocked": "结构",
   "gui.hermitpurpletarget.search_empty": "找不到目标",
-  "gui.hermitpurpletarget.random": "随机"
+  "gui.hermitpurpletarget.tab_stands": "替身",
+  "gui.hermitpurpletarget.tab_biomes": "地形",
+  "gui.hermitpurpletarget.search_empty": "无法找到该道具",
+  "gui.hermitpurpletarget.random": "随机",
+  "action.rotp_zhp.hp_grab_heal": "传导治愈波纹",
+  "action.rotp_zhp.hp_doxx.stand": "念写替身为%s的替身使者",
+  "action.rotp_zhp.hp_doxx_user": "的替身使者",
+  "jojo.message.action_condition.no_player_target": "你需要选择玩家或者替身为目标",
+  "gui.hermitpurpletarget.tab_stands": "替身",
+  "gui.hermitpurpletarget.tab_biomes": "地形",
+  "rotp_zhp.config.hamonToHermit": "Hamon gives Hermit Purple",
+  "rotp_zhp.config.control": "Hamon control required",
+  "rotp_zhp.config.strength": "Hamon strenght required",
+  "rotp_zhp.config.breathing": "Hamon strenght breathing"
 
 }
