--- a/src/main/resources/assets/rotp_zhp/lang/es_ve.json
+++ b/src/main/resources/assets/rotp_zhp/lang/es_ve.json
@@ -63,5 +63,27 @@
 
 
   "entity.epicfight.wither_ghost": "Fantasma Wither",
-  "entity.jojo.dummy": "Muñeco"
+  "entity.jojo.dummy": "Muñeco",
+
+  "comment": "COSAS DEL EMPERADOR",
+
+  "entity.rotp_zhp.the_emperor": "El Emperador",
+  "stand.rotp_zhp.the_emperor": "El Emperador",
+
+  "item.rotp_zhp.emperor": "El Emperador",
+
+  "action.rotp_zhp.give_emp": "Invocar Emperador",
+  "action.rotp_zhp.target": "Objetivo actual: %s",
+  "action.rotp_zhp.stand_target": "Seleccionar objetivo",
+  "action.rotp_zhp.no_stand_target": "Quitar objetivo específico",
+
+  "rotp_zhp.type.random": "Aleatorio",
+  "rotp_zhp.type.players": "Jugadores",
+  "rotp_zhp.type.hostile": "Mobs hostiles",
+  "rotp_zhp.type.non": "Solo una pistola, espero que esten contentos",
+
+  "rotp_zhp.subtitle.emp_shot": "Disparo del emperador",
+  "rotp_zhp.subtitle.emp_user": "\"Emperador\"",
+  "rotp_zhp.subtitle.emp_summon": "Invocación del Emperador",
+  "rotp_zhp.subtitle.emp_umsummon": "Desinvocación del Emperador"
 }
