--- a/src/main/resources/assets/rotp_zhp/lang/en_us.json
+++ b/src/main/resources/assets/rotp_zhp/lang/en_us.json
@@ -67,9 +67,6 @@
   "entity.epicfight.wither_ghost": "Wither Ghost",
   "entity.jojo.dummy": "Dummy",
 
-  "commands.hermit.player.success": "%s has been set as your Hermit purple's target",
-  "commands.hermit_target.failed.single": "Failed at putting a target to Hermit Purple"
-
 
   "comment": "EMPEROR STUFF",
 
@@ -91,6 +88,9 @@
   "rotp_zhp.subtitle.emp_shot": "Emperor Shot",
   "rotp_zhp.subtitle.emp_user": "\"Emperor\"",
   "rotp_zhp.subtitle.emp_summon": "Summon emperor",
-  "rotp_zhp.subtitle.emp_umsummon": "Unsummon emperor"
+  "rotp_zhp.subtitle.emp_umsummon": "Unsummon emperor",
+
+  "commands.hermit.player.success": "%s has been set as your Hermit purple's target",
+  "commands.hermit_target.failed.single": "Failed at putting a target to Hermit Purple"
 
 }
