--- a/src/main/resources/assets/rotp_zhp/lang/es_mx.json
+++ b/src/main/resources/assets/rotp_zhp/lang/es_mx.json
@@ -10,6 +10,7 @@
   "action.rotp_zhp.hp_grab_heal": "Enredadera sanadora",
   "action.rotp_zhp.cringe": "OH NO CRINGE",
 
+
   "action.rotp_zhp.hp_breath": "Respiración de hamon",
   "action.rotp_zhp.hp_block": "Protección de espinas",
   "action.rotp_zhp.hp_vine": "Enredadera",
@@ -49,24 +50,9 @@
   "gui.hermitpurpletarget.tab_hidden": "Entidades",
   "gui.hermitpurpletarget.tab_blocked": "Estructuras",
   "gui.hermitpurpletarget.tab_stands": "Stands",
-  "gui.hermitpurpletarget.tab_biomes": "Biomas",
+  "gui.hermitpurpletarget.tab_biomes": "Biomes",
   "gui.hermitpurpletarget.search_empty": "No existe objetivo con ese nombre",
   "gui.hermitpurpletarget.random": "Aleatorio",
-
-
-  "rotp_zhp.config.hamonToHermit": "Hamon gives Hermit Purple",
-  "rotp_zhp.config.control": "Hamon control required",
-  "rotp_zhp.config.strength": "Hamon strenght required",
-  "rotp_zhp.config.breathing": "Hamon strenght breathing",
-  "rotp_zhp.config.hermitHamon": "Can Hermit Purple make hamon attacks target Stands?",
-
-  "entity.rotp_zhp.hp_vine": "Enredadera de Hermit Purple",
-  "entity.rotp_zhp.hp_barrier": "Barrera de Hermit Purple",
-  "entity.rotp_zhp.hp_grab_vine": "Enredadera atrapante de Hermit Purple",
-  "entity.rotp_zhp.hp_grappling_vine": "Enredadera agarradora de Hermit Purple",
-
-  "entity.epicfight.wither_ghost": "Fantasma Wither",
-  "entity.jojo.dummy": "Dummy",
 
   "comment": "COSAS DEL EMPERADOR",
 
@@ -88,8 +74,9 @@
   "rotp_zhp.subtitle.emp_shot": "Disparo del emperador",
   "rotp_zhp.subtitle.emp_user": "\"Emperador\"",
   "rotp_zhp.subtitle.emp_summon": "Invocación del Emperador",
-  "rotp_zhp.subtitle.emp_umsummon": "Desinvocación del Emperador"
+  "rotp_zhp.subtitle.emp_umsummon": "Desinvocación del Emperador",
 
   "commands.hermit.player.success": "%s ha sido puesto como objetivo de Hermit Purple",
   "commands.hermit_target.failed.single": "No se ha podido poner el objetivo en Hermit Purple"
+
 }
